--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
 }
 
 main {
+  margin: 0 auto;
   background: url(./assets/Mobile.png);
   background-repeat: no-repeat;
   width: 375px;
@@ -33,12 +34,22 @@ main {
 .avatar {
   width: 10rem;
   margin: 11.5rem auto 1.5rem;
+
   position: relative;
 }
 
 .avatar span {
   position: absolute;
   top: -15px;
+  z-index: 1;
+}
+
+.avatar > img {
+  width: 10rem;
+  height: 11.5rem;
+  object-fit: cover;
+
+  clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
 }
 
 h1 {
