--- a/style.css
+++ b/style.css
@@ -12,17 +12,17 @@
 }
 
 body {
+  justify-items: center;
   height: 100%;
   display: grid;
   color: var(--title-color);
 }
 
 main {
-  margin: 0 auto;
-  background: url(./assets/Mobile.png);
-  background-repeat: no-repeat;
-  width: 375px;
-  height: 812px;
+  background: url(./assets/background.svg) no-repeat center/cover;
+  width: 100vw;
+  min-height: 812px;
+  height: 100vh;
 }
 
 .container {
@@ -77,4 +77,14 @@ ul {
   display: flex;
   gap: 0.5rem;
   justify-content: center;
+}
+
+@media (min-width: 606px) {
+  main {
+    background-image: url(./assets/background2.svg);
+  }
+
+  .container {
+    margin: 15rem auto;
+  }
 }
